--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to BlogVerse</title>
+    <title>Welcome to BlogHub</title>
+    <link rel="icon" href="/Frontend/assets/image/blogging.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/Frontend/css/welcome-page.css">
 </head>
