--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,7 +6,7 @@
     <title>Welcome to BlogHub</title>
     <link rel="icon" href="/Frontend/assets/image/blogging.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="/Frontend/css/welcome-page.css">
+    <link rel="stylesheet" href="/Frontend/css/index.css">
 </head>
 <body>
 
