--- a/Frontend/pages/login-and-register/login-and-register.html
+++ b/Frontend/pages/login-and-register/login-and-register.html
@@ -26,8 +26,26 @@
                     <label for="loginPassword">Password</label>
                     <input type="password" id="loginPassword" name="password" required>
                 </div>
+                <div class="forgot-password">
+                    <a href="#" id="forgotPasswordLink">Forgot Password?</a>
+                </div>
                 <button type="submit" class="submit-btn">Login</button>
             </form>
+
+            <!-- Forgot Password Modal -->
+            <div class="modal" id="forgotPasswordModal">
+                <div class="modal-content">
+                    <span class="close">&times;</span>
+                    <h2>Forgot Password</h2>
+                    <form id="forgotPasswordForm">
+                        <div class="form-group">
+                            <label for="forgotEmail">Email Address</label>
+                            <input type="email" id="forgotEmail" name="email" required>
+                        </div>
+                        <button type="submit" class="submit-btn">Send Reset Link</button>
+                    </form>
+                </div>
+            </div>
 
             <!-- Register Form -->
             <form class="register-form" id="registerForm">
