feat: update login form to use email instead of username and add note for email/password requirements

--- a/Frontend/pages/login-and-register/login-and-register.html
+++ b/Frontend/pages/login-and-register/login-and-register.html
@@ -19,8 +19,8 @@
             <form class="login-form active" id="loginForm">
                 <h2>Login</h2>
                 <div class="form-group">
-                    <label for="loginUsername">Username</label>
-                    <input type="text" id="loginUsername" name="username" required>
+                    <label for="loginEmail">Email</label>
+                    <input type="email" id="loginEmail" name="email" required>
                 </div>
                 <div class="form-group">
                     <label for="loginPassword">Password</label>
