feat: implement logout functionality across admin and publisher dashboards, and update home page with logout script

--- a/Frontend/pages/Publisher/publisher-dashboard.html
+++ b/Frontend/pages/Publisher/publisher-dashboard.html
@@ -9,4 +9,5 @@
     <h1>Publisher Dashboard</h1>
     <button id="logoutBtn">Logout</button>
   </body>
+  <script src="/Frontend/JavaScript/Publisher/publisher-dashboard.js"></script>
 </html>
