--- a/Frontend/pages/home-page.html
+++ b/Frontend/pages/home-page.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Home Page</h1>
     <button id="logoutBtn">Logout</button>
+    <script src="/Frontend/JavaScript/home-page.js"></script>
   </body>
 </html>
