--- a/Frontend/pages/Admin/admin-dashboard.html
+++ b/Frontend/pages/Admin/admin-dashboard.html
@@ -9,4 +9,5 @@
     <h1>Admin Dashboard</h1>
     <button id="logoutBtn">Logout</button>
   </body>
+  <script src="/Frontend/JavaScript/Admin/admin-dashboard.js"></script>
 </html>
