--- a/Frontend/pages/home-page.html
+++ b/Frontend/pages/home-page.html
@@ -3,11 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
+    <title>BlogHub - Home</title>
+    <link rel="icon" href="/Frontend/assets/image/blogging.png" />
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="/Frontend/css/home-page.css">
   </head>
   <body>
-    <h1>Home Page</h1>
-    <button id="logoutBtn">Logout</button>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">BlogHub</a>
+        <div class="ms-auto">
+          <div class="d-flex align-items-center">
+            <div class="search-container me-3">
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search articles...">
+                <button class="btn btn-outline-secondary" type="button">
+                  <i class="fas fa-search"></i>
+                </button>
+              </div>
+            </div>
+            <div class="d-flex align-items-center">
+              <img src="https://via.placeholder.com/40" alt="Profile" class="profile-image me-3">
+              <button class="logout-btn" id="logoutBtn">
+                <i class="fas fa-sign-out-alt me-1"></i>Logout
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Main Content -->
+    <div class="container mt-4">
+      <div class="row">
+        <!-- No Articles Message -->
+        <div class="col-12 text-center">
+          <div class="alert alert-info">
+            <i class="fas fa-info-circle me-2"></i>
+            No articles available yet. Check back later for new content!
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Bootstrap JS and dependencies -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/Frontend/JavaScript/home-page.js"></script>
   </body>
 </html>
