--- a/Frontend/pages/Publisher/publisher-dashboard.html
+++ b/Frontend/pages/Publisher/publisher-dashboard.html
@@ -1,13 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Publisher Dashboard</h1>
-    <button id="logoutBtn">Logout</button>
-  </body>
-  <script src="/Frontend/JavaScript/Publisher/publisher-dashboard.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Publisher Dashboard - BlogHub</title>
+    <link rel="icon" href="/Frontend/assets/image/blogging.png" />
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="/Frontend/css/Publisher/publisher-dashboard.css">
+</head>
+<body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light mb-4">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold text-primary" href="#">BlogHub</a>
+            <div class="d-flex align-items-center">
+                <button class="btn btn-primary me-2" data-bs-toggle="modal" data-bs-target="#createArticleModal">
+                    <i class="fas fa-plus me-1"></i> New Article
+                </button>
+                <div class="dropdown me-2">
+                    <img src="https://via.placeholder.com/40" alt="Profile" class="profile-img" id="profileDropdown" 
+                         data-bs-toggle="dropdown" aria-expanded="false">
+                    <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+                        <li><a class="dropdown-item" href="#"><i class="fas fa-user me-2"></i>Profile</a></li>
+                        <li><a class="dropdown-item" href="#"><i class="fas fa-cog me-2"></i>Settings</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item text-danger" href="#"><i class="fas fa-sign-out-alt me-2"></i>Logout</a></li>
+                    </ul>
+                </div>
+                <button id="logoutBtn" class="btn btn-outline-danger">
+                    <i class="fas fa-sign-out-alt me-1"></i> Logout
+                </button>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h2 class="h4 mb-0">My Articles</h2>
+            <div>
+                <button class="btn btn-outline-primary" id="generateArticleBtn">
+                    <i class="fas fa-magic me-1"></i> Generate Article
+                </button>
+            </div>
+        </div>
+
+        <!-- Article Tabs -->
+        <ul class="nav nav-pills mb-4" id="articleTabs" role="tablist">
+            <li class="nav-item" role="presentation">
+                <button class="nav-link active" id="published-tab" data-bs-toggle="pill" data-bs-target="#published" 
+                        type="button" role="tab">Published</button>
+            </li>
+            <li class="nav-item" role="presentation">
+                <button class="nav-link" id="scheduled-tab" data-bs-toggle="pill" data-bs-target="#scheduled" 
+                        type="button" role="tab">Scheduled</button>
+            </li>
+
+        </ul>
+
+        <!-- Tab Content -->
+        <div class="tab-content" id="articleTabsContent">
+            <!-- Published Articles -->
+            <div class="tab-pane fade show active" id="published" role="tabpanel" aria-labelledby="published-tab">
+                <div class="text-center py-5">
+                    <div class="mb-3">
+                        <i class="fas fa-newspaper fa-4x text-muted mb-3"></i>
+                        <h4 class="text-muted">No articles published yet</h4>
+                        <p class="text-muted">Get started by creating your first article</p>
+                        <button class="btn btn-primary mt-2" data-bs-toggle="modal" data-bs-target="#createArticleModal">
+                            <i class="fas fa-plus me-1"></i> Create Article
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Scheduled Articles -->
+            <div class="tab-pane fade" id="scheduled" role="tabpanel" aria-labelledby="scheduled-tab">
+                <div class="text-center py-5">
+                    <div class="mb-3">
+                        <i class="fas fa-calendar-alt fa-4x text-muted mb-3"></i>
+                        <h4 class="text-muted">No scheduled articles</h4>
+                        <p class="text-muted">Schedule your first article by setting a future publish date</p>
+                        <button class="btn btn-primary mt-2" data-bs-toggle="modal" data-bs-target="#createArticleModal">
+                            <i class="fas fa-plus me-1"></i> Create Article
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+
+    <!-- Create Article Modal -->
+    <div class="modal fade" id="createArticleModal" tabindex="-1" aria-labelledby="createArticleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="createArticleModalLabel">Create New Article</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="articleForm">
+                        <div class="mb-3">
+                            <label for="articleTitle" class="form-label">Article Title</label>
+                            <input type="text" class="form-control" id="articleTitle" placeholder="Enter article title" required>
+                        </div>
+                        <div class="mb-3">
+                            <label for="articleImage" class="form-label">Featured Image</label>
+                            <input class="form-control" type="file" id="articleImage" accept="image/*">
+                        </div>
+                        <div class="mb-3">
+                            <label for="articleContent" class="form-label">Content</label>
+                            <textarea class="form-control" id="articleContent" rows="10" placeholder="Write your article here..."></textarea>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="articleCategory" class="form-label">Category</label>
+                                <select class="form-select" id="articleCategory">
+                                    <option selected>Select a category</option>
+                                    <option value="technology">Technology</option>
+                                    <option value="web-dev">Web Development</option>
+                                    <option value="ai">Artificial Intelligence</option>
+                                    <option value="programming">Programming</option>
+                                </select>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="publishDate" class="form-label">Publish Date</label>
+                                <input type="datetime-local" class="form-control" id="publishDate">
+                                <div class="form-text">Leave empty to publish immediately</div>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-end mt-4">
+                            <button type="button" class="btn btn-outline-secondary me-2" data-bs-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary">Publish Article</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Bootstrap JS Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <!-- Custom JS for UI interactions -->
+    <script>
+        // Profile image click handler
+        document.getElementById('profileDropdown').addEventListener('click', function() {
+            // This would normally check if a profile image exists and update the src
+            // For demo, we're using a placeholder
+            const profileImg = this;
+            // In a real app, you would check if user has a profile image
+            // If not, you could show a default avatar
+            console.log("Profile dropdown clicked");
+        });
+
+        // Generate Article button click handler
+        document.getElementById('generateArticleBtn').addEventListener('click', function() {
+            // This would normally redirect to an article generation page
+            alert('Redirecting to article generation page...');
+            // window.location.href = '/generate-article';
+        });
+
+        // Form submission handler
+        document.getElementById('articleForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            // In a real app, this would submit the form data to your backend
+            console.log('Form submitted');
+            // Hide the modal after submission
+            const modal = bootstrap.Modal.getInstance(document.getElementById('createArticleModal'));
+            modal.hide();
+            // Show success message
+            alert('Article published successfully!');
+        });
+    </script>
+</body>
 </html>
