--- a/Frontend/pages/home-page.html
+++ b/Frontend/pages/home-page.html
@@ -4,54 +4,157 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlogHub - Home</title>
-    <link rel="icon" href="/Frontend/assets/image/blogging.png" />
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="/Frontend/css/home-page.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    <style>
+      .article-card {
+        transition: transform 0.2s;
+        margin-bottom: 20px;
+      }
+      .article-card:hover {
+        transform: translateY(-5px);
+      }
+      .article-image {
+        height: 200px;
+        object-fit: cover;
+      }
+      .logout-btn {
+        background-color: #dc3545;
+        color: white;
+        border: none;
+        padding: 8px 16px;
+        border-radius: 20px;
+      }
+      .logout-btn:hover {
+        background-color: #c82333;
+        transform: scale(1.05);
+      }
+      .profile-image {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+    </style>
   </head>
   <body>
-    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light">
       <div class="container">
         <a class="navbar-brand" href="#">BlogHub</a>
-        <div class="ms-auto">
-          <div class="d-flex align-items-center">
-            <div class="search-container me-3">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search articles...">
-                <button class="btn btn-outline-secondary" type="button">
-                  <i class="fas fa-search"></i>
-                </button>
-              </div>
-            </div>
-            <div class="d-flex align-items-center">
-              <img src="https://via.placeholder.com/40" alt="Profile" class="profile-image me-3">
-              <button class="logout-btn" id="logoutBtn">
-                <i class="fas fa-sign-out-alt me-1"></i>Logout
-              </button>
-            </div>
-          </div>
+        <div class="ms-auto d-flex align-items-center">
+          <img
+            src="https://via.placeholder.com/40"
+            alt="Profile"
+            class="profile-image me-3"
+          />
+          <button class="logout-btn" id="logoutBtn">
+            <i class="fas fa-sign-out-alt me-1"></i>Logout
+          </button>
         </div>
       </div>
     </nav>
 
-    <!-- Main Content -->
     <div class="container mt-4">
-      <div class="row">
-        <!-- No Articles Message -->
+      <div class="row" id="articlesRow">
         <div class="col-12 text-center">
           <div class="alert alert-info">
-            <i class="fas fa-info-circle me-2"></i>
-            No articles available yet. Check back later for new content!
+            <i class="fas fa-spinner fa-spin me-2"></i>Loading articles...
           </div>
         </div>
       </div>
     </div>
 
-    <!-- Bootstrap JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/Frontend/JavaScript/home-page.js"></script>
+    <script>
+      // Logout functionality
+      document
+        .getElementById("logoutBtn")
+        .addEventListener("click", async () => {
+          try {
+            const res = await fetch("http://localhost:8080/api/auth/logout", {
+              method: "POST",
+              credentials: "include",
+            });
+            if (res.ok) {
+              alert("Logged out successfully!");
+              window.location.href =
+                "/Frontend/pages/login-and-register/login-and-register.html";
+            } else {
+              alert("Logout failed");
+            }
+          } catch (err) {
+            console.error(err);
+            alert("Error logging out");
+          }
+        });
+
+      // Load published articles
+      async function loadPublishedArticles() {
+        try {
+          const res = await fetch(
+            "http://localhost:8080/api/articles/published?page=0&size=12",
+            { credentials: "include" }
+          );
+          const data = await res.json();
+          const row = document.getElementById("articlesRow");
+          row.innerHTML = "";
+
+          if (!data.content || data.content.length === 0) {
+            row.innerHTML = `
+              <div class="col-12 text-center">
+                <div class="alert alert-info">
+                  <i class="fas fa-info-circle me-2"></i>No articles yet
+                </div>
+              </div>`;
+            return;
+          }
+
+          data.content.forEach((article) => {
+            const col = document.createElement("div");
+            col.className = "col-md-4 mb-3";
+
+            // excerpt limit 100 characters
+            const excerpt =
+              article.content.length > 100
+                ? article.content.substring(0, 100) + "..."
+                : article.content;
+
+            col.innerHTML = `
+              <div class="card article-card h-100">
+                ${
+                  article.imageUrl
+                    ? `<img src="${article.imageUrl}" class="card-img-top article-image" alt="">`
+                    : ""
+                }
+                <div class="card-body d-flex flex-column">
+                  <h5 class="card-title">${article.title}</h5>
+                  <p class="card-text">${excerpt}</p>
+                  <a href="article-detail.html?id=${
+                    article.id
+                  }" class="btn btn-primary mt-auto">Read Full Article</a>
+                </div>
+              </div>
+            `;
+            row.appendChild(col);
+          });
+        } catch (err) {
+          console.error(err);
+          document.getElementById("articlesRow").innerHTML = `
+            <div class="col-12 text-center">
+              <div class="alert alert-danger">
+                <i class="fas fa-exclamation-triangle me-2"></i>Error loading articles
+              </div>
+            </div>`;
+        }
+      }
+
+      document.addEventListener("DOMContentLoaded", loadPublishedArticles);
+    </script>
   </body>
 </html>
