--- a/Frontend/pages/login-and-register/login-and-register.html
+++ b/Frontend/pages/login-and-register/login-and-register.html
@@ -1,79 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login & Register</title>
-    <link rel="icon" href="/Frontend/assets/image/blogging.png">
-    <link rel="stylesheet" href="/Frontend/css/login-and-register/login-and-register.css">
-</head>
-<body>
+    <link rel="icon" href="/Frontend/assets/image/blogging.png" />
+    <link
+      rel="stylesheet"
+      href="/Frontend/css/login-and-register/login-and-register.css"
+    />
+  </head>
+  <body>
     <div class="container">
-        <div class="form-container">
-            <div class="form-toggle">
-                <button class="toggle-btn active" data-form="login">Login</button>
-                <button class="toggle-btn" data-form="register">Register</button>
-            </div>
-            
-            <!-- Login Form -->
-            <form class="login-form active" id="loginForm">
-                <h2>Login</h2>
-                <div class="form-group">
-                    <label for="loginEmail">Email</label>
-                    <input type="email" id="loginEmail" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="loginPassword">Password</label>
-                    <input type="password" id="loginPassword" name="password" required>
-                </div>
-                <div class="forgot-password">
-                    <a href="#" id="forgotPasswordLink">Forgot Password?</a>
-                </div>
-                <button type="submit" class="submit-btn">Login</button>
-            </form>
-
-            <!-- Forgot Password Modal -->
-            <div class="modal" id="forgotPasswordModal">
-                <div class="modal-content">
-                    <span class="close">&times;</span>
-                    <h2>Forgot Password</h2>
-                    <form id="forgotPasswordForm">
-                        <div class="form-group">
-                            <label for="forgotEmail">Email Address</label>
-                            <input type="email" id="forgotEmail" name="email" required>
-                        </div>
-                        <button type="submit" class="submit-btn">Send Reset Link</button>
-                    </form>
-                </div>
-            </div>
-
-            <!-- Register Form -->
-            <form class="register-form" id="registerForm">
-                <h2>Register</h2>
-                <div class="form-group">
-                    <label for="registerUsername">Username</label>
-                    <input type="text" id="registerUsername" name="username" required>
-                </div>
-                <div class="form-group">
-                    <label for="registerEmail">Email</label>
-                    <input type="email" id="registerEmail" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="registerPassword">Password</label>
-                    <input type="password" id="registerPassword" name="password" required>
-                </div>
-                <div class="form-group">
-                    <label for="role">Role</label>
-                    <select id="role" name="role" required>
-                        <option value="">Select Role</option>
-                        <option value="user">User</option>
-                        <option value="publisher">Publisher</option>
-                    </select>
-                </div>
-                <button type="submit" class="submit-btn">Register</button>
-            </form>
+      <div class="form-container">
+        <div class="form-toggle">
+          <button class="toggle-btn active" data-form="login">Login</button>
+          <button class="toggle-btn" data-form="register">Register</button>
         </div>
+
+        <!-- Login Form -->
+        <form class="login-form active" id="loginForm">
+          <h2>Login</h2>
+          <div class="form-group">
+            <label for="loginEmail">Email</label>
+            <input type="email" id="loginEmail" name="email" required />
+          </div>
+          <div class="form-group">
+            <label for="loginPassword">Password</label>
+            <input
+              type="password"
+              id="loginPassword"
+              name="password"
+              required
+            />
+          </div>
+          <div class="forgot-password">
+            <a href="#" id="forgotPasswordLink">Forgot Password?</a>
+          </div>
+          <button type="submit" class="submit-btn">Login</button>
+        </form>
+
+        <!-- Forgot Password Modal -->
+        <div class="modal" id="forgotPasswordModal">
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Forgot Password</h2>
+            <form id="forgotPasswordForm">
+              <div class="form-group">
+                <label for="forgotEmail">Email Address</label>
+                <input type="email" id="forgotEmail" name="email" required />
+              </div>
+              <button type="submit" class="submit-btn">Send Reset Link</button>
+            </form>
+          </div>
+        </div>
+
+        <!-- Register Form -->
+        <form class="register-form" id="registerForm">
+          <h2>Register</h2>
+          <div class="form-group">
+            <label for="registerUsername">Username</label>
+            <input type="text" id="registerUsername" name="username" required />
+          </div>
+          <div class="form-group">
+            <label for="registerEmail">Email</label>
+            <input type="email" id="registerEmail" name="email" required />
+          </div>
+          <div class="form-group">
+            <label for="registerPassword">Password</label>
+            <input
+              type="password"
+              id="registerPassword"
+              name="password"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="role">Role</label>
+            <select id="role" name="role" required>
+              <option value="">Select Role</option>
+              <option value="user">User</option>
+              <option value="publisher">Publisher</option>
+            </select>
+          </div>
+          <button type="submit" class="submit-btn">Register</button>
+        </form>
+      </div>
     </div>
     <script src="/Frontend/JavaScript/login-and-register/login-and-register.js"></script>
-</body>
+  </body>
 </html>
