--- a/Frontend/pages/Publisher/publisher-dashboard.html
+++ b/Frontend/pages/Publisher/publisher-dashboard.html
@@ -15,10 +15,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <link
-      rel="stylesheet"
-      href="/Frontend/pages/Publisher/publisher-dashboard.html"
-    />
   </head>
   <body>
     <!-- Navigation -->
@@ -70,6 +66,7 @@
         </div>
       </div>
     </nav>
+
     <div class="container">
       <div class="d-flex justify-content-between align-items-center mb-4">
         <h2 class="h4 mb-0">My Articles</h2>
@@ -110,14 +107,13 @@
 
       <!-- Tab Content -->
       <div class="tab-content" id="articleTabsContent">
-        <!-- Published Articles -->
         <div
           class="tab-pane fade show active"
           id="published"
           role="tabpanel"
           aria-labelledby="published-tab"
         >
-          <div class="text-center py-5">
+          <div class="text-center py-5" id="publishedContainer">
             <div class="mb-3">
               <i class="fas fa-newspaper fa-4x text-muted mb-3"></i>
               <h4 class="text-muted">No articles published yet</h4>
@@ -135,14 +131,13 @@
           </div>
         </div>
 
-        <!-- Scheduled Articles -->
         <div
           class="tab-pane fade"
           id="scheduled"
           role="tabpanel"
           aria-labelledby="scheduled-tab"
         >
-          <div class="text-center py-5">
+          <div class="text-center py-5" id="scheduledContainer">
             <div class="mb-3">
               <i class="fas fa-calendar-alt fa-4x text-muted mb-3"></i>
               <h4 class="text-muted">No scheduled articles</h4>
@@ -262,57 +257,149 @@
       </div>
     </div>
 
-    <!-- Bootstrap JS Bundle with Popper -->
+    <!-- Bootstrap + jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Custom JS for UI interactions -->
+    <!-- Custom JS -->
     <script>
-      const articleForm = document.getElementById("articleForm");
+      const API_BASE = "http://localhost:8080/api";
 
-      articleForm.addEventListener("submit", async (e) => {
+      // 🔹 Logout
+      $("#logoutBtn").on("click", function () {
+        const token = localStorage.getItem("jwt");
+        $.ajax({
+          url: API_BASE + "/auth/logout",
+          method: "POST",
+          headers: { Authorization: "Bearer " + token },
+          success: function () {
+            localStorage.removeItem("jwt");
+            alert("Logged out successfully!");
+            window.location.href =
+              "/Frontend/pages/login-and-register/login-and-register.html";
+          },
+          error: function () {
+            alert("Logout failed");
+          },
+        });
+      });
+
+      // 🔹 Article Create
+      $("#articleForm").on("submit", function (e) {
         e.preventDefault();
 
-        // Collect form values
-        const title = document.getElementById("articleTitle").value;
-        const content = document.getElementById("articleContent").value;
-        const category = document.getElementById("articleCategory").value;
-        const publishDate = document.getElementById("publishDate").value;
-        const imageFile = document.getElementById("articleImage").files[0];
+        const title = $("#articleTitle").val().trim();
+        const content = $("#articleContent").val().trim();
+        const category =
+          $("#articleCategory").val() === "Select a category"
+            ? ""
+            : $("#articleCategory").val();
+        const publishDate = $("#publishDate").val();
+        const imageFile = $("#articleImage")[0].files[0];
 
-        // Prepare form data (multipart/form-data)
-        const formData = new FormData();
-        formData.append("title", title);
-        formData.append("content", content);
-        formData.append("category", category);
-        if (publishDate) formData.append("publishDate", publishDate);
-        if (imageFile) formData.append("image", imageFile);
+        const fd = new FormData();
+        fd.append("title", title);
+        fd.append("content", content);
+        fd.append("category", category);
+        if (publishDate) fd.append("publishDate", publishDate);
+        if (imageFile) fd.append("image", imageFile);
 
-        try {
-          const response = await fetch("http://localhost:8080/api/articles", {
-            method: "POST",
-            body: formData,
-            credentials: "include", // 🔑 send cookies (JWT token stored in HttpOnly cookie)
-          });
+        const token = localStorage.getItem("jwt");
 
-          if (!response.ok) {
-            throw new Error("Failed to create article");
-          }
+        $.ajax({
+          url: API_BASE + "/articles",
+          method: "POST",
+          data: fd,
+          processData: false,
+          contentType: false,
+          headers: { Authorization: "Bearer " + token },
+          success: function (data) {
+            const modal = bootstrap.Modal.getInstance(
+              document.getElementById("createArticleModal")
+            );
+            modal.hide();
+            alert(
+              data.status === "PUBLISHED"
+                ? "Article published!"
+                : "Article scheduled for " + data.scheduleAt
+            );
+            loadMyArticles("PUBLISHED");
+            loadMyArticles("SCHEDULED");
+          },
+          error: function (xhr) {
+            console.error(xhr);
+            alert("Error creating article: " + xhr.status);
+          },
+        });
+      });
 
-          const result = await response.json();
-          console.log("✅ Article created:", result);
+      // 🔹 Load My Articles
+      function loadMyArticles(status) {
+        const wrapId =
+          status === "PUBLISHED" ? "publishedContainer" : "scheduledContainer";
+        const container = $("#" + wrapId);
+        container.empty();
 
-          alert("Article created successfully!");
-          articleForm.reset();
+        const token = localStorage.getItem("jwt");
 
-          // Close modal after submission
-          const modal = bootstrap.Modal.getInstance(
-            document.getElementById("createArticleModal")
-          );
-          modal.hide();
-        } catch (error) {
-          console.error("❌ Error creating article:", error);
-          alert("Error creating article: " + error.message);
-        }
+        $.ajax({
+          url: `${API_BASE}/articles/me?status=${status}&page=0&size=50`,
+          method: "GET",
+          headers: { Authorization: "Bearer " + token },
+          success: function (json) {
+            if (!json.content.length) {
+              container.html(`
+                <div class="text-center py-5">
+                  <h4 class="text-muted">No ${status.toLowerCase()} articles</h4>
+                </div>
+              `);
+              return;
+            }
+
+            const rows = $('<div class="row g-3"></div>');
+            json.content.forEach((a) => {
+              const col = $(`
+                <div class="col-md-4">
+                  <div class="card h-100">
+                    ${
+                      a.imageUrl
+                        ? `<img src="${a.imageUrl}" class="card-img-top" alt="">`
+                        : ""
+                    }
+                    <div class="card-body d-flex flex-column">
+                      <h5 class="card-title">${a.title}</h5>
+                      <p class="card-text">${a.excerpt}</p>
+                      <div class="mt-auto">
+                        <a class="btn btn-outline-primary btn-sm" href="#view-${
+                          a.id
+                        }">
+                          View
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              `);
+              rows.append(col);
+            });
+
+            container.append(rows);
+          },
+          error: function (xhr) {
+            console.error("Error loading articles", xhr);
+            container.html(`
+              <div class="text-center py-5">
+                <h4 class="text-danger">Error loading articles</h4>
+              </div>
+            `);
+          },
+        });
+      }
+
+      // 🔹 Initial load
+      $(document).ready(function () {
+        loadMyArticles("PUBLISHED");
+        loadMyArticles("SCHEDULED");
       });
     </script>
   </body>
