feat: update article management functionality, enhance CORS settings, and improve user profile image handling

--- a/Frontend/pages/Publisher/publisher-dashboard.html
+++ b/Frontend/pages/Publisher/publisher-dashboard.html
@@ -92,7 +92,7 @@
           </button>
           <div class="dropdown me-2">
             <img
-              src="https://via.placeholder.com/40"
+              src="/Frontend/assets/image/user-icon.png"
               alt="Profile"
               class="profile-img"
               id="profileDropdown"
