--- a/Frontend/pages/home-page.html
+++ b/Frontend/pages/home-page.html
@@ -128,7 +128,7 @@
           if (!res.ok) throw new Error("Network response was not ok");
 
           const data = await res.json();
-          console.log("Home Articles:", data);
+          // console.log("Home Articles:", data);
           renderArticles(data);
         } catch (err) {
           console.error(err);
