feat: implement AI article generation feature with GPT integration and update related DTOs and services

--- a/Frontend/pages/Publisher/publisher-dashboard.html
+++ b/Frontend/pages/Publisher/publisher-dashboard.html
@@ -134,9 +134,9 @@
           <i class="fas fa-newspaper me-2"></i>My Articles
         </h2>
         <div>
-          <button class="btn btn-outline-primary" id="generateArticleBtn">
+          <a href="/Frontend/pages/Publisher/AI-generated-article.html" class="btn btn-outline-primary" id="generateArticleBtn">
             <i class="fas fa-magic me-1"></i> Generate Article
-          </button>
+          </a>
         </div>
       </div>
 
